feat: add grid function of main content

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 <body>
     <div class="container">
         <div class="header">
-            H
+            <h1>Library</h1>
+            <button class="account">Account</button>
         </div>
         <div class="main">
-            <h2>Library Collection</h2>
+            <h2>Books Collection</h2>
             <div class="section">
-                123
             </div>
         </div>
         <div class="footer">
-            F
+            <p>Copyright © codexeger 2022</p>
         </div>
     </div>
 </body>
