--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="header">
             <h1>Library</h1>
-            <button class="account">Account</button>
+            <button class="account">Sign-in</button>
         </div>
         <div class="main">
             <h2>Books Collection</h2>
